# ros_packages_noos_api

./: .gitignore  .gitmodules  README.md
config/: platform.ini
src/chatbot/: package.xml
src/chatbot/src/: main.cpp  options.cpp
src/delete_map/: package.xml
src/delete_map/srv/: map_delete.srv
src/delete_orb_model/: CMakeLists.txt  package.xml
src/delete_orb_model/src/: main.cpp
src/face_detection/: CMakeLists.txt
src/face_detection/msg/: face.msg  faces.msg  faces_cropped.msg
src/face_detection/src/: face_detector.cpp  face_detector.hpp  includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp
src/noos_chatbot/: CMakeLists.txt
src/noos_chatbot/src/: chat.cpp  chat.hpp  includes.ihh  options.hpp
src/noos_delete_map/: CMakeLists.txt
src/noos_delete_map/src/: main.cpp  test.cpp
src/noos_delete_orb_model/: CMakeLists.txt
src/noos_delete_orb_model/src/: includes.ihh  main.cpp  test.cpp
src/noos_delete_orb_model/srv/: orb_delete.srv
src/noos_face_detection/: CMakeLists.txt  package.xml
src/noos_face_detection/src/: face_detector.hpp  includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp
src/noos_human_detection/: CMakeLists.txt  package.xml
src/noos_human_detection/msg/: human.msg  humans.msg  humans_cropped.msg
src/noos_human_detection/src/: human_detector.cpp  human_detector.hpp  includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp
src/noos_icp_slam/: CMakeLists.txt  package.xml
src/noos_icp_slam/launch/: slam_test.launch
src/noos_icp_slam/msg/: pose2d.msg  pose3d.msg
src/noos_icp_slam/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  options.cpp  options.hpp  slam.cpp  slam.hpp
src/noos_obj_recognition/: CMakeLists.txt  package.xml
src/noos_obj_recognition/msg/: pair.msg
src/noos_obj_recognition/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  obj_recognition.cpp  obj_recognition.hpp
src/noos_orb/: CMakeLists.txt  package.xml
src/noos_orb/msg/: pair_vector.msg  point_array.msg
src/noos_orb/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  options.cpp  options.hpp  orb_wrapper.cpp  orb_wrapper.hpp
src/noos_path_planning/: CMakeLists.txt  package.xml
src/noos_path_planning/src/: common.hpp  includes.ihh  main.cpp  test.cpp
src/noos_path_planning/srv/: path.srv
src/noos_qr/: CMakeLists.txt  package.xml
src/noos_qr/msg/: qr.msg  qrs.msg
src/noos_qr/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  qr_detector.cpp  qr_detector.hpp
src/noos_vision_batch/: CMakeLists.txt  package.xml
src/noos_vision_batch/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  options.cpp  options.hpp  vision_batch_wrapper.cpp  vision_batch_wrapper.hpp
src/vision_batch/: CMakeLists.txt  package.xml
src/vision_batch/msg/: batch.msg
src/vision_batch/src/: includes.ihh  main.cpp  noos_bridge.cpp  noos_bridge.hpp  vision_batch.cpp  vision_batch.hpp
